--- a/s/index.html
+++ b/s/index.html
@@ -155,7 +155,7 @@
         <div class="con">
             <div class="shlogo"></div>
             <div class="sou">
-                <form action="https://www.baidu.com/s?wd=" method="get" target="_self">
+                <form action="https://www.google.com/search?hlzh=" method="get" target="_self">
                     <input class="wd" type="text" placeholder="请输入搜索内容" name="q" x-webkit-speech lang="zh-CN">
                     <button><svg class="icon" style=" width: 21px; height: 21px; opacity: 0.5;" aria-hidden="true"><use xlink:href="#icon-sousuo"></use></svg></button>
                 </form>
