--- a/vscode/index.html
+++ b/vscode/index.html
@@ -16,5 +16,5 @@
     </style>
 
 <div align=center class="aspect-ratio">
-    <iframe src="https://github1s.com"></iframe>
+    <iframe src="https://github1s.com/lusurui-luthree/lusurui-luthree.github.io"></iframe>
 </div>
