--- a/zzm/index.html
+++ b/zzm/index.html
@@ -769,7 +769,7 @@ _Global._openManageSite = true;
 _Global._hiddenMobile = false;
 _Global._hiddenICP = false;
 _Global._hiddenFooterInfo = false;
-_Global._footerInfoV2 = "©2021 - ZhangHe &nbsp;Luthree 版权所有";
+_Global._footerInfoV2 = "Copyright ©️ 2016-2021 by Luthree, Inc. All Rights Reserved";
 _Global.isFreeVer = true;
 _Global._hasBeiAn = false; 
 _Global._hiddenMps = false; 
