--- a/zjxp/index.htm
+++ b/zjxp/index.htm
@@ -5,10 +5,10 @@
 <title>自家学派--陆子</title>
 </head>
 
-<frameset rows="59,*,58">
-	<frame name="top" scrolling="no" noresize target="contents" src="页眉.htm">
+<frameset rows="73,*,58">
+	<frame name="top" scrolling="no" noresize target="contents" src="up.htm">
 	<frameset cols="150,*">
-		<frame name="contents" target="main" src="左侧.htm">
+		<frame name="contents" target="main" src="left.htm">
 		<frame name="main" src="zjxp.htm" target="_self">
 	</frameset>
 	<frame name="bottom" scrolling="no" noresize target="contents" src="copyright__luthree.htm">
