--- a/zjxp/_vti_cnf/index.htm
+++ b/zjxp/_vti_cnf/index.htm
@@ -1,19 +1,19 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|LUTHREE-PC\\haier
-vti_modifiedby:SR|PC-20201103NLKM\\Administrator
-vti_timelastmodified:TR|24 Nov 2020 08:03:21 -0000
+vti_modifiedby:SR|DESKTOP-285BKBN\\lujianjun
+vti_timelastmodified:TR|22 Jul 2021 01:23:59 -0000
 vti_timecreated:TR|17 Oct 2020 08:58:49 -0000
 vti_title:SR|自家学派--陆子
-vti_extenderversion:SR|6.0.2.6551
+vti_extenderversion:SR|6.0.2.8161
 vti_backlinkinfo:VX|
 vti_editor:SW|FrontPage Frames Wizard
-vti_nexttolasttimemodified:TW|17 Nov 2020 08:34:32 -0000
-vti_cacheddtm:TX|17 Nov 2020 08:34:24 -0000
-vti_filesize:IR|605
+vti_nexttolasttimemodified:TW|22 Jul 2021 01:19:39 -0000
+vti_cacheddtm:TX|22 Jul 2021 01:23:59 -0000
+vti_filesize:IR|603
 vti_cachedtitle:SR|自家学派--陆子
 vti_cachedbodystyle:SR|<body>
-vti_cachedlinkinfo:VX|F|页眉.htm F|左侧.htm F|zjxp.htm F|copyright__luthree.htm
-vti_cachedsvcrellinks:VX|FFUS|页眉.htm FFUS|左侧.htm FFUS|zjxp.htm FFUS|copyright__luthree.htm
+vti_cachedlinkinfo:VX|F|up.htm F|left.htm F|zjxp.htm F|copyright__luthree.htm
+vti_cachedsvcrellinks:VX|FFUS|up.htm FFUS|left.htm FFUS|zjxp.htm FFUS|copyright__luthree.htm
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
