--- a/zjxp/_vti_cnf/zjxp.htm
+++ b/zjxp/_vti_cnf/zjxp.htm
@@ -1,17 +1,17 @@
 vti_encoding:SR|utf8-nl
 vti_author:SR|HAIER-PC-LU\\haier
-vti_modifiedby:SR|PC-20201103NLKM\\Administrator
-vti_timelastmodified:TR|17 Nov 2020 08:30:07 -0000
+vti_modifiedby:SR|DESKTOP-285BKBN\\lujianjun
+vti_timelastmodified:TR|22 Jul 2021 01:24:08 -0000
 vti_timecreated:TR|22 Sep 2020 10:42:23 -0000
-vti_extenderversion:SR|6.0.2.6551
+vti_extenderversion:SR|6.0.2.8161
 vti_backlinkinfo:VX|index.htm
-vti_nexttolasttimemodified:TW|17 Nov 2020 08:26:27 -0000
+vti_nexttolasttimemodified:TR|22 Jul 2021 01:24:08 -0000
 vti_title:SR|自家学派
-vti_cacheddtm:TX|17 Nov 2020 08:30:07 -0000
-vti_filesize:IR|8933
+vti_cacheddtm:TX|22 Jul 2021 01:24:08 -0000
+vti_filesize:IR|9010
 vti_cachedtitle:SR|自家学派
-vti_cachedlinkinfo:VX|S|自家学派logo.png S|自家封印-正.jpg S|自家封印-背.jpg S|油条.jpg
-vti_cachedsvcrellinks:VX|FSUS|自家学派logo.png FSUS|自家封印-正.jpg FSUS|自家封印-背.jpg FSUS|油条.jpg
+vti_cachedlinkinfo:VX|S|images/自家学派logo.png S|images/自家封印-正.jpg S|images/自家封印-背.jpg S|images/油条.jpg
+vti_cachedsvcrellinks:VX|FSUS|images/自家学派logo.png FSUS|images/自家封印-正.jpg FSUS|images/自家封印-背.jpg FSUS|images/油条.jpg
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
