--- a/zjxp/zjxp.htm
+++ b/zjxp/zjxp.htm
@@ -6,7 +6,7 @@
 
 <base target="_self">
 
-<p><img border="0" src="自家学派logo.png" width="150" height="145"></p>
+<p><img border="0" src="images/自家学派logo.png" width="150" height="145"></p>
 <p><font face="微软雅黑" size="6">自家学派</font></p>
 <p><font face="微软雅黑" size="5">我们是谁？</font></p>
 <p><font face="微软雅黑">——自家学派成员<br>
@@ -45,6 +45,8 @@
 泽子和李子共同发明圣诞舞，累计3016名弟子。<br>
 2020.1.15<br>
 累计3017名弟子。<br>
+2020.11.8<br>
+自家学派成立1周年。<br>
 2020.11.11<br>
 累计3026名弟子。<br>
 2020.11.16<br>
@@ -122,13 +124,13 @@ Pneumonia”，简称“NCP”；<br>
 <p><font face="微软雅黑"><font size="5">自家封印</font><br>
 我们拥有最顶级的封印<br>
 &nbsp;</font></p>
-<p><font face="微软雅黑"><img border="0" src="自家封印-正.jpg" width="720" height="496"></font></p>
+<p><font face="微软雅黑"><img border="0" src="images/自家封印-正.jpg" width="720" height="496"></font></p>
 <p><font face="微软雅黑"><br>
 自家封印，是世界上最高级的封印。与其配套的还有油条封印。</font></p>
 <p><font face="微软雅黑"><font size="5">自家七戒</font><br>
 印在自家封印背面的文字<br>
 <br>
-<img border="0" src="自家封印-背.jpg" width="720" height="480"></font></p>
+<img border="0" src="images/自家封印-背.jpg" width="720" height="480"></font></p>
 <p><font face="微软雅黑"><br>
 1.欺师灭祖，不敬尊长<br>
 2.恃强欺弱，擅伤无辜<br>
@@ -156,7 +158,7 @@ Pneumonia”，简称“NCP”；<br>
 <p><font face="微软雅黑"><b><font size="5">油条</font></b><br>
 <br>
 油条是什么梗<br>
-<img border="0" src="油条.jpg" width="420" height="137"><br>
+<img border="0" src="images/油条.jpg" width="420" height="137"><br>
 “答案当然是油条了”，这句话在自家学派中算是一句名言了，此话来源于玄子，由永子的录音传播出去。</font></p>
 <p><font face="微软雅黑"><br>
 <font size="4">原文</font><br>
